crates/cyrs-syntax/tests/snapshots/syntax_snapshots__expr_list_comprehension_filter_only.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"RETURN [x IN [1, 2, 3] WHERE x > 1]\")"
---
SOURCE_FILE@0..35
  STATEMENT@0..35
    RETURN_CLAUSE@0..35
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..35
        RETURN_ITEMS@6..35
          RETURN_ITEM@6..35
            LIST_COMPREHENSION@6..35
              WHITESPACE@6..7 " "
              L_BRACK@7..8 "["
              NAME@8..9
                IDENT@8..9 "x"
              WHITESPACE@9..10 " "
              IN_KW@10..12 "IN"
              LIST_LITERAL@12..22
                WHITESPACE@12..13 " "
                L_BRACK@13..14 "["
                LITERAL_EXPR@14..15
                  INT_LITERAL@14..15 "1"
                COMMA@15..16 ","
                LITERAL_EXPR@16..18
                  WHITESPACE@16..17 " "
                  INT_LITERAL@17..18 "2"
                COMMA@18..19 ","
                LITERAL_EXPR@19..21
                  WHITESPACE@19..20 " "
                  INT_LITERAL@20..21 "3"
                R_BRACK@21..22 "]"
              WHITESPACE@22..23 " "
              WHERE_KW@23..28 "WHERE"
              BINARY_EXPR@28..34
                VAR_EXPR@28..30
                  WHITESPACE@28..29 " "
                  IDENT@29..30 "x"
                WHITESPACE@30..31 " "
                GT@31..32 ">"
                LITERAL_EXPR@32..34
                  WHITESPACE@32..33 " "
                  INT_LITERAL@33..34 "1"
              R_BRACK@34..35 "]"
