crates/cyrs-syntax/tests/snapshots/syntax_snapshots__expr_list_comprehension_map_only.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"RETURN [x IN [1, 2, 3] | x + 1]\")"
---
SOURCE_FILE@0..31
  STATEMENT@0..31
    RETURN_CLAUSE@0..31
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..31
        RETURN_ITEMS@6..31
          RETURN_ITEM@6..31
            LIST_COMPREHENSION@6..31
              WHITESPACE@6..7 " "
              L_BRACK@7..8 "["
              NAME@8..9
                IDENT@8..9 "x"
              WHITESPACE@9..10 " "
              IN_KW@10..12 "IN"
              LIST_LITERAL@12..22
                WHITESPACE@12..13 " "
                L_BRACK@13..14 "["
                LITERAL_EXPR@14..15
                  INT_LITERAL@14..15 "1"
                COMMA@15..16 ","
                LITERAL_EXPR@16..18
                  WHITESPACE@16..17 " "
                  INT_LITERAL@17..18 "2"
                COMMA@18..19 ","
                LITERAL_EXPR@19..21
                  WHITESPACE@19..20 " "
                  INT_LITERAL@20..21 "3"
                R_BRACK@21..22 "]"
              WHITESPACE@22..23 " "
              PIPE@23..24 "|"
              BINARY_EXPR@24..30
                VAR_EXPR@24..26
                  WHITESPACE@24..25 " "
                  IDENT@25..26 "x"
                WHITESPACE@26..27 " "
                PLUS@27..28 "+"
                LITERAL_EXPR@28..30
                  WHITESPACE@28..29 " "
                  INT_LITERAL@29..30 "1"
              R_BRACK@30..31 "]"
