crates/cyrs-syntax/tests/snapshots/syntax_snapshots__expr_list_predicate_none_prop_filter.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"RETURN NONE(x IN xs WHERE x.foo = 'bar')\")"
---
SOURCE_FILE@0..40
  STATEMENT@0..40
    RETURN_CLAUSE@0..40
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..40
        RETURN_ITEMS@6..40
          RETURN_ITEM@6..40
            LIST_PREDICATE_EXPR@6..40
              WHITESPACE@6..7 " "
              NONE_KW@7..11 "NONE"
              L_PAREN@11..12 "("
              NAME@12..13
                IDENT@12..13 "x"
              WHITESPACE@13..14 " "
              IN_KW@14..16 "IN"
              VAR_EXPR@16..19
                WHITESPACE@16..17 " "
                IDENT@17..19 "xs"
              WHITESPACE@19..20 " "
              WHERE_KW@20..25 "WHERE"
              BINARY_EXPR@25..39
                PROP_ACCESS_EXPR@25..31
                  VAR_EXPR@25..27
                    WHITESPACE@25..26 " "
                    IDENT@26..27 "x"
                  DOT@27..28 "."
                  IDENT@28..31 "foo"
                WHITESPACE@31..32 " "
                EQ@32..33 "="
                LITERAL_EXPR@33..39
                  WHITESPACE@33..34 " "
                  STRING_LITERAL@34..39 "'bar'"
              R_PAREN@39..40 ")"
