crates/cyrs-syntax/tests/snapshots/syntax_snapshots__expr_list_predicate_single_with_where.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"RETURN SINGLE(x IN xs WHERE x < 10)\")"
---
SOURCE_FILE@0..35
  STATEMENT@0..35
    RETURN_CLAUSE@0..35
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..35
        RETURN_ITEMS@6..35
          RETURN_ITEM@6..35
            LIST_PREDICATE_EXPR@6..35
              WHITESPACE@6..7 " "
              SINGLE_KW@7..13 "SINGLE"
              L_PAREN@13..14 "("
              NAME@14..15
                IDENT@14..15 "x"
              WHITESPACE@15..16 " "
              IN_KW@16..18 "IN"
              VAR_EXPR@18..21
                WHITESPACE@18..19 " "
                IDENT@19..21 "xs"
              WHITESPACE@21..22 " "
              WHERE_KW@22..27 "WHERE"
              BINARY_EXPR@27..34
                VAR_EXPR@27..29
                  WHITESPACE@27..28 " "
                  IDENT@28..29 "x"
                WHITESPACE@29..30 " "
                LT@30..31 "<"
                LITERAL_EXPR@31..34
                  WHITESPACE@31..32 " "
                  INT_LITERAL@32..34 "10"
              R_PAREN@34..35 ")"
